--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "http": "^0.0.1-security",
     "mongodb": "^4.1.3",
-    "mongoose": "^6.0.10"
+    "mongoose": "^6.0.10",
+    "nodemailer": "^6.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
